# Refbooks_API

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linter.yml  tests.yml
api/: settings.py  urls.py
api/fixtures/: refbook_elements.json  refbook_items.json  refbook_versions.json  refbooks.json
api/refbooks/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
api/swagger_specs/: parameters.py  response_schemas.py  view_schema.py
contrib/: env_generator.py
docs/: README_rus.md
